# cstq

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish_new_versions.yml
docs/: README.md  cstq_extended_node.md
docs/extended_nodes/: call.md  class_def.md
src/cstq/: __init__.py  __version__.py  constants.py  csttraformers.py  cstvisitors.py  matchers.py  matchers_helpers.py  node2id.py  nodes.py  obj2cst.py  obj2x.py  query.py
src/cstq/nodes/: __init__.py  call.py  class_def.py  extended.py  range.py  sequence.py
src/docs/: README.md
src/docs/docs/: cstq_extended_node.md
src/docs/docs/extended_nodes/: call.md  class_def.md
tests/: __init__.py  conftest.py
tests/e2e/: test_apply.py  test_extended_call.py  test_extended_class_def.py  test_extended_node.py  test_find_assignment.py  test_find_class_def.py  test_find_function.py  test_find_function_call.py  test_find_import_alias.py  test_find_import_from.py  test_insert.py  test_insert_after.py  test_insert_before.py  test_list.py  test_map.py  test_obj2cst.py  test_obj2m.py  test_query_init.py  test_query_nodes_and_id.py  test_replace.py  test_search.py  test_str2node.py  test_tuple.py
