[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cstq"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = []
authors = [
  { name = "Alvaro Leiva", email = "aleivag@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "libcst"
]

[project.urls]
Documentation = "https://github.com/aleivag/cstq#readme"
Issues = "https://github.com/aleivag/cstq/issues"
Source = "https://github.com/aleivag/cstq"

[tool.hatch.version]
path = "src/cstq/__version__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "ipython",
  "jupyter",
  "dumas>=0.0.4",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
docs = [
  "dumas render-dir src/docs --output-dir ."
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.9.1",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
  "isort",
  "pytest-stub",
  "libcst",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/cstq tests}"
style = [
  "ruff {args:src/cstq tests}",
  "black --check --diff {args:src/cstq tests}",
]
fmt = [
  "black {args:src/cstq tests}",
  "isort {args:src/cstq tests}",
  "ruff --fix {args:src/cstq tests}",
  "style",
]

all = [
  "fmt",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["cstq"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"*" = ["S101", "PLR2004"]

[tool.coverage.run]
source_pkgs = ["cstq", "tests"]
branch = true
parallel = true
omit = [
  "src/cstq/__version__.py",
]

[tool.coverage.paths]
cstq = ["src/cstq", "*/cstq/src/cstq"]
tests = ["tests", "*/cstq/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
